2011-11-03  Mark Hahnenberg  <mhahnenberg@apple.com>

        De-virtualize JSObject::className
        https://bugs.webkit.org/show_bug.cgi?id=71428

        Reviewed by Sam Weinig.

        Added className to the MethodTable, changed all the virtual 
        implementations of className to static ones, and replaced 
        all call sites with corresponding lookups in the MethodTable.

        * API/JSCallbackObject.h:
        * API/JSCallbackObjectFunctions.h:
        (JSC::::className):
        * JavaScriptCore.exp:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
        * debugger/DebuggerActivation.cpp:
        (JSC::DebuggerActivation::className):
        * debugger/DebuggerActivation.h:
        * jsc.cpp:
        (GlobalObject::createStructure):
        * profiler/Profiler.cpp:
        (JSC::Profiler::createCallIdentifier):
        * runtime/ClassInfo.h:
        * runtime/JSCell.cpp:
        (JSC::JSCell::className):
        * runtime/JSCell.h:
        * runtime/JSObject.cpp:
        (JSC::JSObject::className):
        * runtime/JSObject.h:
        * runtime/ObjectPrototype.cpp:
        (JSC::objectProtoFuncToString):
        * testRegExp.cpp:
        (GlobalObject::createStructure):

2011-11-02  Jer Noble  <jer.noble@apple.com>

        Add Clock class and platform-specific implementations.
        https://bugs.webkit.org/show_bug.cgi?id=71341

        Reviewed by Sam Weinig.

        Add WTF_USE_COREAUDIO macro for use by PlatformClockCA.

        * wtf/Platform.h:

2011-11-03  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: fixing win build. step2.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2011-11-03  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: fix windows build, step1

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2011-11-03  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: preserve script location for inline handlers.